service for update recurring bill status
